# 10xConstruction_Path_Smoothing_and_Trajectory_Control_in_2D_Space

./: .gitignore  ASSIGNMENT_DOCUMENTATION.md  README.md  setup.sh  start_navigation.sh
algo/: TrajAlgo.ipynb
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: turtlebot_sim.launch.py
robot_trajectory_generator/: README.md  WAYPOINT_SETUP_COMPLETE.md  setup.py
robot_trajectory_generator/launch/: complete_navigation.launch.py  trajectory_system.launch.py  waypoint_collector.launch.py
robot_trajectory_generator/robot_trajectory_generator/: catmull_rom_generator.py  pure_pursuit_controller.py  test_case_publisher.py  trajectory_generator_example.py
robot_trajectory_generator/scripts/: launch_complete_system.sh
src/: README.md
src/algo/: TrajAlgo.ipynb
src/robot_bringup/: README.md
src/robot_bringup/launch/: turtlebot_sim.launch.py
src/robot_bringup/rviz/: display.rviz  trajectory_display.rviz
src/robot_trajectory_generator/: ARCHITECTURE.md  COMPLETE_SYSTEM_GUIDE.md  MAIN_README.md  README.md  package.xml  setup.cfg  setup.py
src/robot_trajectory_generator/launch/: complete_navigation.launch.py  trajectory_system.launch.py  waypoint_collector.launch.py
src/robot_trajectory_generator/robot_trajectory_generator/: pure_pursuit_controller.py  test_case_publisher.py  trajectory_analyzer.py  velocity_profiler.py  waypoint_collector.py
